# OpenTools

./: README.md
Hardware/DevelopmentTool/: DevelopmentTool.kicad_pcb  DevelopmentTool.kicad_prl  DevelopmentTool.kicad_pro  DevelopmentTool.kicad_sch
Hardware/RpiStatus/: RpiStatus.kicad_pcb  RpiStatus.kicad_prl  RpiStatus.kicad_pro  RpiStatus.kicad_sch
Hardware/USBHubx3TTL/: USBHubx3TTL.kicad_prl  USBHubx3TTL.kicad_pro  USBHubx3TTL.kicad_sch
Hardware/VAR-SOM based/TestBoard 1/: Ethernet.kicad_sch  Peripherals.kicad_sch  Power.kicad_sch  RPi_Header.kicad_sch  Readme.md  SOM.kicad_sch  TestBoard 1.kicad_pcb.bak_useredit  TestBoard 1.kicad_prl  TestBoard 1.kicad_pro  TestBoard 1.kicad_sch  USB.kicad_sch  t_test-drc.rpt  t_test.kicad_prl  t_test2.kicad_prl
Hardware/VAR-SOM based/TestBoard 1/generator/: README.md  build.py  design.py  klib.py  pcbparse.py  route.py
Software/: README.md
Software/app/gsender/: CMakeLists.txt  resources.qrc
Software/app/gsender/qml/: AlignPage.qml  ConnectPage.qml  Dro.qml  FilesPage.qml  JogPage.qml  Main.qml  PcbPage.qml  ProbePage.qml  RunPage.qml
Software/app/gsender/src/: GrblController.cpp  GrblController.h  HeightMap.cpp  HeightMap.h  NcFileModel.cpp  NcFileModel.h  main.cpp
Software/app/gsender/src/pcb/: CamProcessor.cpp  CamProcessor.h  ExcellonParser.cpp  ExcellonParser.h  Geometry.cpp  Geometry.h  GerberParser.cpp  GerberParser.h  PcbCam.cpp  PcbCam.h
Software/app/gsender/src/vision/: CameraAligner.cpp  CameraAligner.h
Software/docs/: BUILD.md
Software/yocto/kas/: opentools-rpi3.yml
Software/yocto/meta-opentools/conf/: layer.conf
Software/yocto/meta-opentools/conf/distro/: opentools.conf
Software/yocto/meta-opentools/recipes-apps/gsender/: gsender_1.0.bb
Software/yocto/meta-opentools/recipes-core/base-files/: base-files_%.bbappend
Software/yocto/meta-opentools/wic/: opentools-rpi.wks
Software/yocto/scripts/: setup-yocto.sh
(+8 files in other folders)
